fix: dark mode styles for widget inspector (#1526)

--- a/frontend/src/_styles/colors.scss
+++ b/frontend/src/_styles/colors.scss
@@ -5,6 +5,7 @@ $light-green: #82bf99;
 $dark-green: #3b734f;
 $primary: #4D72FA;
 $disabled: #9E9EA8;
+$dark-background: #1f2936;
 
 .color-primary {
   color: $primary;
